--- a/public/css/group_detail.css
+++ b/public/css/group_detail.css
@@ -10,3 +10,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Arial", "Verdana", "Tahoma";
     font-weight: 500;
 }
+
+.text {
+    font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Arial", "Verdana", "Tahoma";
+    font-weight: bold;
+    font-size:15px;
+}
