--- a/public/css/order_view.css
+++ b/public/css/order_view.css
@@ -5,3 +5,24 @@ body {
 input[type="text"] {
     font-size:25px
 }
+
+.star {
+   color: red; /* Make it red */
+   font-size: 70%; /* Make it twice as large */
+}
+
+body {
+    font-family: "Microsoft YaHei", "Arial", "Verdana", "Tahoma";
+    color: #424242;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Arial", "Verdana", "Tahoma";
+    font-weight: 500;
+}
+
+.text {
+    font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Arial", "Verdana", "Tahoma";
+    font-weight: bold;
+    font-size:15px;
+}
