--- a/public/css/group_detail.css
+++ b/public/css/group_detail.css
@@ -16,3 +16,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: bold;
     font-size:15px;
 }
+
+textarea {
+	width:100%;
+}
